[package]
name = "cryptopals"
version = "0.1.0"
authors = ["Alexander Charette <acharette.wake@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13.0"
hex = "0.4.3"
openssl = "0.10.33"

[dependencies.phf]
version = "0.8.0"
features = ["macros"]